# AFMX

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE.md  INSTALL.md  LICENSE  OSS_ENTERPRISE_ANALYSIS.md  README.md  RELEASE_NOTES_v1.3.0.md  ROADMAP.md  SECURITY.md  _fix_snippet.py  demo_agentability.py  demo_multiagent.py  docker-compose.yml  prometheus.yml  pyproject.toml  raman9-cn ────────────────────────────────────────────────────  realistic_handlers.py  requirements-prod.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish.yml
afmx/: __init__.py  __main__.py  _ui_block.py  _ui_spa_block.py  cli.py  config.py  main.py  startup_handlers.py
afmx/adapters/: __init__.py  base.py  bedrock.py  crewai.py  google_adk.py  langchain.py  langgraph.py  mcp.py  openai.py  registry.py  semantic_kernel.py
afmx/api/: __init__.py  adapter_routes.py  adapters_routes.py  admin_routes.py  audit_routes.py  matrix_routes.py  routes.py  schemas.py  websocket.py
afmx/audit/: __init__.py  model.py  store.py
afmx/auth/: __init__.py  rbac.py  store.py
afmx/core/: __init__.py  _engine_patch.py  cognitive_router.py  concurrency.py  dispatcher.py  engine.py  executor.py  hooks.py  retry.py  router.py  variable_resolver.py
afmx/dashboard/: .env.example  .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
afmx/dashboard/src/: App.tsx  api.ts  index.css  main.tsx  store.ts  types.ts  vite-env.d.ts
afmx/dashboard/src/components/charts/: Charts.tsx
afmx/dashboard/src/components/layout/: Shell.tsx  Sidebar.tsx  TopBar.tsx
afmx/dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  Modal.tsx  Toast.tsx  index.ts  index.tsx
afmx/dashboard/src/hooks/: useApi.ts
afmx/dashboard/src/pages/: Audit.tsx  Domains.tsx  Executions.tsx  Keys.tsx  LiveStream.tsx  Matrices.tsx  MatrixView.tsx  Overview.tsx  Plugins.tsx  RunMatrix.tsx
afmx/dashboard/src/utils/: fmt.ts
afmx/domains/: __init__.py  finance.py  healthcare.py  legal.py  manufacturing.py  tech.py
afmx/integrations/: __init__.py  agentability_hook.py  hyperstate.py  map_plugin.py  rhfl.py
afmx/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  rbac.py
afmx/models/: __init__.py  edge.py  execution.py  matrix.py  node.py
afmx/observability/: __init__.py  events.py  metrics.py  webhook.py
afmx/plugins/: __init__.py  registry.py
afmx/runtime/: __init__.py  agent_runner.py  tool_runner.py
afmx/static/: dashboard.html
afmx/store/: __init__.py  checkpoint.py  matrix_store.py  state_store.py
afmx/utils/: __init__.py  exceptions.py  helpers.py
docs/: adapters.md  api_reference.md  architecture.md  changelog.md  concepts.md  configuration.md  deployment.md  domains.md  handlers.md  hooks.md  index.md  integrations.md  matrix_design.md  observability.md  quickstart.md  testing.md
examples/: 01_sequential_flow.py  02_parallel_fanout.py  03_conditional_routing.py  04_retry_fallback.py  05_variable_resolver.py  06_hooks_and_plugins.py  07_multi_agent.py  08_adapters.py  09_langchain_rag_openai.py  09b_rag_via_api.py  10_mcp_adapter.py  11_hyperstate_map.py  12_rhfl_gate.py  13_enterprise_adapters.py  README.md  handlers.py  matrix.json
scripts/: setup.sh  start.sh  test_api.sh  test_load.py  test_realtime.py  test_ws.py
sdk/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_adapters_integration.py  test_api.py  test_engine.py
tests/unit/: __init__.py  test_adapters.py  test_checkpoint.py  test_cognitive_matrix.py  test_concurrency.py  test_diagonal_engine.py  test_dispatcher.py  test_edge.py  test_execution.py  test_executor.py  test_hooks.py  test_matrix.py  test_matrix_store.py  test_node.py  test_openai_adapter.py  test_plugin_registry.py  test_retry.py  test_router.py  test_state_store.py  test_v130_adapters_integrations.py  test_variable_resolver.py  test_week1_week2_fixes.py
